--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 
 # Hosting
 # Replace by your domain name
-# NEXT_PUBLIC_APP_URL=https://example.com
+NEXT_PUBLIC_APP_URL=https://app.caire.se
 
 # Sentry DSN
 NEXT_PUBLIC_SENTRY_DSN=
@@ -19,7 +19,7 @@ BILLING_PLAN_ENV=prod
 ######## After creating the file, you can add the following variables.
 # Database
 # Using an incorrect DATABASE_URL value, Next.js build will timeout and you will get the following error: "because it took more than 60 seconds"
-# DATABASE_URL=postgresql://postgres@localhost:5432/postgres
+DATABASE_URL=https://yoabinxuienttjomabgm.supabase.co
 
 # Stripe
 STRIPE_SECRET_KEY=your_stripe_secret_key
