--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "test:e2e": "playwright test",
     "commit": "cz",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "dotenv -c production -- drizzle-kit migrate",
-    "db:studio": "dotenv -c production -- drizzle-kit studio",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "tsx src/lib/db/migrate.ts",
+    "db:studio": "drizzle-kit studio",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
@@ -27,38 +28,42 @@
   },
   "dependencies": {
     "@clerk/localizations": "^3.2.1",
-    "@clerk/nextjs": "^5.7.3",
+    "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^2.1.36",
     "@electric-sql/pglite": "^0.2.12",
     "@hookform/resolvers": "^3.9.0",
     "@logtail/pino": "^0.5.2",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@sentry/nextjs": "^8.34.0",
     "@spotlightjs/spotlight": "^2.5.0",
+    "@supabase/supabase-js": "^2.47.16",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-table": "^8.20.5",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.35.1",
+    "drizzle-orm": "^0.35.3",
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
     "next-intl": "^3.21.1",
     "next-themes": "^0.3.0",
-    "pg": "^8.13.0",
+    "pg": "^8.13.1",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
+    "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "shadcn-ui": "^0.9.4",
     "sharp": "^0.33.5",
     "stripe": "^16.12.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -76,6 +81,7 @@
     "@playwright/test": "^1.48.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@shadcn/ui": "^0.0.4",
     "@storybook/addon-essentials": "^8.3.5",
     "@storybook/addon-interactions": "^8.3.5",
     "@storybook/addon-links": "^8.3.5",
@@ -92,13 +98,14 @@
     "@types/pg": "^8.11.10",
     "@types/react": "^18.3.11",
     "@vitejs/plugin-react": "^4.3.2",
-    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/coverage-v8": "^2.1.8",
     "@vitest/expect": "^2.1.3",
     "autoprefixer": "^10.4.20",
     "checkly": "^4.9.0",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
     "cssnano": "^7.0.6",
+    "dotenv": "^16.4.7",
     "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.26.2",
     "eslint": "^8.57.1",
@@ -117,17 +124,19 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
+    "pg-core": "^0.1.15",
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.1.2",
     "start-server-and-test": "^2.0.8",
     "storybook": "^8.3.5",
+    "supabase": "^2.6.8",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.3",
+    "vitest": "^2.1.8",
     "vitest-fail-on-console": "^0.7.1"
   },
   "config": {
