--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,42 +1,31 @@
 {
-  "editor.tabSize": 2,
-  "editor.detectIndentation": false,
-  "search.exclude": {
-    "package-lock.json": true
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
   },
-
-  // TypeScript
-  "typescript.tsdk": "node_modules/typescript/lib", // Use the workspace version of TypeScript
-  "typescript.enablePromptUseWorkspaceTsdk": true, // For security reasons it's require that users opt into using the workspace version of typescript
-  "typescript.preferences.autoImportFileExcludePatterns": [
-    // useRouter should be imported from `next/navigation` instead of `next/router`
-    "next/router.d.ts",
-    "next/dist/client/router.d.ts",
-    // give priority for Link to next/link instead of lucide-react
-    "lucide-react"
+  "deno.enablePaths": ["supabase/functions"],
+  "deno.lint": true,
+  "deno.unstable": [
+    "bare-node-builtins",
+    "byonm",
+    "sloppy-imports",
+    "unsafe-proto",
+    "webgpu",
+    "broadcast-channel",
+    "worker-options",
+    "cron",
+    "kv",
+    "ffi",
+    "fs",
+    "http",
+    "net"
   ],
-  "typescript.preferences.preferTypeOnlyAutoImports": true, // Prefer type-only imports
-
-  // Vitest
-  "testing.automaticallyOpenTestResults": "neverOpen", // Don't open the test results automatically
-
-  // I18n
-  "i18n-ally.localesPaths": [
-    "src/locales"
-  ],
-  "i18n-ally.keystyle": "nested",
-
-  // Disable the default formatter, use ESLint instead
-  "prettier.enable": false,
-  "editor.formatOnSave": false,
-
-  // Auto fix with ESLint on save
   "editor.codeActionsOnSave": [
     "source.addMissingImports",
     "source.fixAll.eslint"
   ],
-
-  // Enable eslint for all supported languages
+  "editor.detectIndentation": false,
+  "editor.formatOnSave": false,
+  "editor.tabSize": 2,
   "eslint.format.enable": true,
   "eslint.validate": [
     "javascript",
@@ -60,5 +49,20 @@
     "pcss",
     "postcss",
     "github-actions-workflow"
-  ]
+  ],
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.localesPaths": ["src/locales"],
+  "prettier.enable": false,
+  "search.exclude": {
+    "package-lock.json": true
+  },
+  "testing.automaticallyOpenTestResults": "neverOpen",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "typescript.preferences.autoImportFileExcludePatterns": [
+    "next/router.d.ts",
+    "next/dist/client/router.d.ts",
+    "lucide-react"
+  ],
+  "typescript.preferences.preferTypeOnlyAutoImports": true,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
