--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "tsx src/lib/db/migrate.ts",
+    "db:migrate:prod": "tsx scripts/migrate-prod.ts",
+    "db:migrate:prod:execute": "tsx scripts/migrate-prod.ts --confirm",
     "db:studio": "drizzle-kit studio",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
     "serve-storybook": "run-s storybook:*",
     "test-storybook:ci": "start-server-and-test serve-storybook http://127.0.0.1:6006 test-storybook",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test:db": "tsx src/libs/test-db.ts",
+    "test:db:simple": "tsx src/libs/test-db-simple.ts"
   },
   "dependencies": {
     "@clerk/localizations": "^3.9.11",
@@ -137,7 +141,7 @@
     "supabase": "^2.6.8",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.8",
