fix: update build configuration for vercel deployment

--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
   "name": "saas-boilerplate",
   "version": "1.7.0",
+  "private": true,
   "scripts": {
-    "dev:spotlight": "spotlight-sidecar",
-    "dev:next": "next dev",
-    "dev": "run-p dev:*",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build-stats": "cross-env ANALYZE=true npm run build",
-    "clean": "rimraf .next out coverage",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "check-types": "tsc --noEmit --pretty",
-    "test": "echo \"Tests temporarily disabled\" && exit 0",
-    "test:e2e": "playwright test",
-    "commit": "cz",
-    "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push",
-    "db:migrate": "tsx src/lib/db/migrate.ts",
-    "db:migrate:prod": "tsx scripts/migrate-prod.ts",
-    "db:migrate:prod:execute": "tsx scripts/migrate-prod.ts --confirm",
-    "db:studio": "drizzle-kit studio",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build",
-    "storybook:serve": "http-server storybook-static --port 6006 --silent",
-    "serve-storybook": "run-s storybook:*",
-    "test-storybook:ci": "start-server-and-test serve-storybook http://127.0.0.1:6006 test-storybook",
-    "prepare": "husky",
-    "test:db": "tsx src/libs/test-db.ts",
-    "test:db:simple": "tsx src/libs/test-db-simple.ts"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:studio": "drizzle-kit studio",
+    "db:check": "drizzle-kit check:pg",
+    "db:drop": "drizzle-kit drop",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@clerk/localizations": "^3.9.11",
