--- a/package.json
+++ b/package.json
@@ -66,7 +66,14 @@
     "shadcn-ui": "^0.9.4",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "1.0.7",
+    "postcss": "8.5.1",
+    "autoprefixer": "10.4.20",
+    "@types/node": "22.10.7",
+    "@types/react": "18.3.18",
+    "typescript": "5.7.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.3",
@@ -96,13 +103,10 @@
     "@testing-library/jest-dom": "^6.6.1",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^22.7.6",
     "@types/pg": "^8.11.10",
-    "@types/react": "^18.3.11",
     "@vitejs/plugin-react": "^4.3.2",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/expect": "^2.1.3",
-    "autoprefixer": "^10.4.20",
     "checkly": "^4.9.0",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
@@ -127,17 +131,12 @@
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
     "pg-core": "^0.1.15",
-    "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.1.2",
     "sharp": "^0.33.5",
     "start-server-and-test": "^2.0.8",
     "storybook": "^8.3.5",
     "supabase": "^2.6.8",
-    "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.8",
     "vitest-fail-on-console": "^0.7.1"
