--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "saas-boilerplate",
-  "version": "1.7.0",
+  "name": "Caire",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -48,6 +48,9 @@
     "@supabase/supabase-js": "^2.47.16",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-table": "^8.20.5",
+    "@types/node": "22.10.7",
+    "@types/react": "18.3.18",
+    "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.35.3",
@@ -58,22 +61,21 @@
     "pg": "^8.13.1",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
+    "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-query": "^3.39.3",
     "recharts": "^2.15.0",
     "shadcn-ui": "^0.9.4",
     "stripe": "^16.12.0",
+    "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.23.8",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
-    "postcss": "8.5.1",
-    "autoprefixer": "10.4.20",
-    "@types/node": "22.10.7",
-    "@types/react": "18.3.18",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.3",
