--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@spotlightjs/spotlight": "^2.5.0",
     "@supabase/supabase-js": "^2.47.16",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-table": "^8.20.5",
     "@types/node": "22.10.7",
     "@types/react": "18.3.18",
