--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.35.3",
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
@@ -66,6 +67,7 @@
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
