--- a/package.json
+++ b/package.json
@@ -59,13 +59,14 @@
     "@tanstack/react-table": "^8.20.5",
     "@types/node": "22.10.7",
     "@types/react": "18.3.18",
+    "@types/react-dom": "19.0.3",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.38.4",
     "lucide-react": "^0.453.0",
-    "next": "^15.1.6",
+    "next": "^14.1.0",
     "next-intl": "^3.26.3",
     "next-themes": "^0.3.0",
     "pg": "^8.13.1",
@@ -74,9 +75,9 @@
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "puppeteer": "^24.1.1",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
     "recharts": "^2.15.0",
